Thu May 30 17:11:04 2002  George Lebl <jirka@5z.com>

	* modules/preferences.vfolder-info.in: arghh! we have two places
	  where preference menus are defined.  Ok fix the bug here as well.

Thu May 30 17:04:48 2002  George Lebl <jirka@5z.com>

	* modules/applications.vfolder-info.in: don't put sawfish capplets
	  in the advanced dir fixes #77772

Thu May 30 10:03:03 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: the directories are of type
	  x-directory/vfolder-desktop

2002-05-28  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-application-registry.c
	(gnome_vfs_application_registry_init) : initialize before we load the
	  applications so that things do not loop.

Tue May 28 15:04:17 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: fix adding/removing of includes
	  to remove inconsistencies between the has and the list

2002-05-27  Ian McKellar  <yakk@yakk.net>

	* configure.in:
	Don't make libgnomevfs depend on libbonobo. It doesn't need it and
	it isn't in the .pc file anyway.

2002-05-26  Alex Graveley  <alex@ximian.com>

	* configure.in (FAM_LIBS): Don't use C++ compiler to compile FAM
	test, as the problem is really with a miscompiled libfam which
	doesn't pull in the needed libstdc++.so, and hence won't link.
	Removing as per alexl's suggestion on bug #80826.

2002-05-24  Alex Graveley  <alex@ximian.com>

	* modules/applications.vfolder-info.in: Remove explicit
	cddb-capplet exclusion, so it will shot up in the Advanced
	settings menu.  Fixes bug #74767.

2002-05-24  Jody Goldberg <jody@gnome.org>

        http://bugzilla.gnome.org/show_bug.cgi?id=80776
	* libgnomevfs/gnome-vfs-application-registry.c
	(application_lookup_or_create) : make sure to load the app db before
	  trying to store something.

2002-05-24  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Bump version number & release.

2002-05-24  Seth Nickell  <snickell@stanford.edu>

	* modules/vfolder-desktop-method.c: