@@ -164,6 +164,7 @@
 	    <Or>
 	      <Keyword>AdvancedSettings</Keyword>
 	      <Keyword>Sawfish</Keyword>
+	      <Keyword>X-GNOME-Sawfish</Keyword>
 	      <Keyword>System</Keyword>
 	      <Keyword>Accessibility</Keyword>
 	      <Keyword>Merged</Keyword>
@@ -182,7 +183,10 @@
 	    <Keyword>Settings</Keyword>
 	    <Keyword>AdvancedSettings</Keyword>
 	    <Not>
-	      <Keyword>Sawfish</Keyword>
+	      <Or>
+	        <Keyword>Sawfish</Keyword>
+	        <Keyword>X-GNOME-Sawfish</Keyword>
+	      </Or>
 	    </Not>
 	  </And>
 	</Query>
@@ -192,7 +196,10 @@
 	  <Desktop>Sawfish.directory</Desktop>
 	  <Query>
 	    <And>
-	      <Keyword>Sawfish</Keyword>
+	      <Or>
+	        <Keyword>Sawfish</Keyword>
+	        <Keyword>X-GNOME-Sawfish</Keyword>
+	      </Or>
 	      <Keyword>Settings</Keyword>
 	    </And>
 	  </Query>
